--- a/GoL/MainWindow.xaml
+++ b/GoL/MainWindow.xaml
@@ -7,12 +7,397 @@
         mc:Ignorable="d"
         Title="MainWindow" 
         Height="620" 
-        Width="960">
+        Width="960"
+        WindowStartupLocation="CenterScreen"
+        WindowStyle="None"
+        ResizeMode="NoResize"
+        AllowsTransparency="True"
+        Background="Transparent">
 
-    <StackPanel Height="620"
-                Width="960">
+    <Grid>
+
+        <Border Height="620"
+                Width="960"
+                CornerRadius="35"
+                Background="#2a2a2a"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                BorderThickness="4"
+                BorderBrush="#ffffff"/>
+
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="120"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="192"/>
+                <ColumnDefinition Width="192"/>
+                <ColumnDefinition Width="192"/>
+                <ColumnDefinition Width="192"/>
+                <ColumnDefinition Width="192"/>
+            </Grid.ColumnDefinitions>
         
-    </StackPanel>
+            <!--размер поля-->
+        
+                <Grid Grid.Row="0"
+                      Grid.Column="0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="45"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+
+                <StackPanel Grid.Row="0" 
+                            Grid.Column="0"
+                            Grid.ColumnSpan="2">
+
+                    <TextBlock Text="Размер поля"
+                       Foreground="White"
+                       FontSize="21"
+                       FontWeight="Bold"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Top"
+                       Margin="0, 10, 0, 0"/>
+
+                </StackPanel>
+
+                <StackPanel Grid.Row="1" 
+                            Grid.Column="0">
+
+                    <TextBlock Text="Высота"
+                               Foreground="White"
+                               VerticalAlignment="Center"
+                               HorizontalAlignment="Center"
+                               FontSize="15"
+                               Margin="0, 10, 0, 0"/>
+
+                    <TextBlock Text="Ширина"
+                               Foreground="White"
+                               VerticalAlignment="Center"
+                               HorizontalAlignment="Center"
+                               FontSize="15"
+                               Margin="0, 10, 0, 0"/>
+                    
+                </StackPanel>
+
+                <StackPanel Grid.Row="1"
+                            Grid.Column="1">
+
+                    <TextBox x:Name="HeightField"
+                             Height="17"
+                             Width="60"
+                             FontSize="12"
+                             HorizontalContentAlignment="Center"
+                             VerticalContentAlignment="Center"
+                             VerticalAlignment="Top"
+                             HorizontalAlignment="Left"
+                             Margin="0,12,0,0"
+                             />
+
+                    <TextBox x:Name="WidthField"
+                             Height="17"
+                             Width="60"
+                             FontSize="12"
+                             HorizontalContentAlignment="Center"
+                             VerticalContentAlignment="Center"
+                             VerticalAlignment="Bottom"
+                             HorizontalAlignment="Left"
+                             Margin="0,15,0,0"
+                             />
+
+                </StackPanel>
+                    
+            </Grid>
+
+            <!--размер клетки-->
+
+            <Grid Grid.Row="0"
+                      Grid.Column="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="45"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+
+                <StackPanel Grid.Row="0" 
+                            Grid.Column="0"
+                            Grid.ColumnSpan="2">
+
+                    <TextBlock Text="Размер клетки"
+                       Foreground="White"
+                       FontSize="21"
+                       FontWeight="Bold"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Top"
+                       Margin="0, 10, 0, 0"/>
+
+                </StackPanel>
+
+                <StackPanel Grid.Row="1" 
+                            Grid.Column="0">
+
+                    <TextBlock Text="Высота"
+                               Foreground="White"
+                               VerticalAlignment="Center"
+                               HorizontalAlignment="Center"
+                               FontSize="15"
+                               Margin="0, 10, 0, 0"/>
+
+                    <TextBlock Text="Ширина"
+                               Foreground="White"
+                               VerticalAlignment="Center"
+                               HorizontalAlignment="Center"
+                               FontSize="15"
+                               Margin="0, 10, 0, 0"/>
+
+                </StackPanel>
+
+                <StackPanel Grid.Row="1"
+                            Grid.Column="1">
+
+                    <TextBox x:Name="HeightPoint"
+                             Height="17"
+                             Width="60"
+                             FontSize="12"
+                             HorizontalContentAlignment="Center"
+                             VerticalContentAlignment="Center"
+                             VerticalAlignment="Top"
+                             HorizontalAlignment="Left"
+                             Margin="0,12,0,0"
+                             />
+
+                    <TextBox x:Name="WidthPoint"
+                             Height="17"
+                             Width="60"
+                             FontSize="12"
+                             HorizontalContentAlignment="Center"
+                             VerticalContentAlignment="Center"
+                             VerticalAlignment="Bottom"
+                             HorizontalAlignment="Left"
+                             Margin="0,15,0,0"
+                             />
+
+                </StackPanel>
+
+            </Grid>
+
+            <!--Тип измерения пространства-->
+
+            <Grid Grid.Row="0"
+                      Grid.Column="2">
+               
+
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="45"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+
+                <StackPanel Grid.Row="0" 
+                            Grid.Column="0"
+                            Grid.ColumnSpan="2">
+
+                    <TextBlock Text="Тип пространства"
+                       Foreground="White"
+                       FontSize="21"
+                       FontWeight="Bold"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Top"
+                       Margin="0, 10, 0, 0"/>
+
+                </StackPanel>
+
+                <StackPanel Grid.Row="1"
+                            Grid.Column="1">
+
+                    <RadioButton x:Name="CloseSpaceRB"
+                                 Content="Закрытое"
+                                 Foreground="White"
+                             Height="17"
+                             FontSize="12"
+                             HorizontalContentAlignment="Center"
+                             VerticalContentAlignment="Center"
+                             VerticalAlignment="Top"
+                             HorizontalAlignment="Left"
+                             Margin="30,12,0,0"
+                             />
+
+                    <RadioButton x:Name="OpenSpaceRB"
+                                 Content="Открытое"
+                                 Foreground="White"
+                             Height="17"
+                             FontSize="12"
+                             HorizontalContentAlignment="Center"
+                             VerticalContentAlignment="Center"
+                             VerticalAlignment="Bottom"
+                             HorizontalAlignment="Left"
+                             Margin="30,15,0,0"
+                             />
+
+                </StackPanel>
+
+            </Grid>
+
+            <!--Скорость-->
+
+            <Grid Grid.Row="0"
+                      Grid.Column="3">
+
+
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="45"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+
+                <StackPanel Grid.Row="0" 
+                            Grid.Column="0"
+                            Grid.ColumnSpan="2">
+
+                    <TextBlock Text="Скорость"
+                       Foreground="White"
+                       FontSize="21"
+                       FontWeight="Bold"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Top"
+                       Margin="0, 10, 0, 0"/>
+
+                </StackPanel>
+
+                <StackPanel Grid.Row="1" 
+                            Grid.Column="0">
+                    
+                    <Label  x:Name="SpeedText"
+                            Content=""
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Top"
+                            Margin="0, 5, 0, 0"
+                            />
+
+                    <Slider x:Name="SpeedSlider"
+                            Width="150"
+                            VerticalAlignment="Top"
+                            HorizontalAlignment="Center"
+                            Margin="0,10,0,0"
+                            />
+
+
+                </StackPanel>
+
+                
+
+            </Grid>
+
+            <!--Кнопки-->
+
+            <Grid Grid.Row="0"
+                      Grid.Column="4">
+
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="140"/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <StackPanel Grid.Row="0"
+                            Grid.Column="0">
+                    
+                <TextBlock Text="Кнопки"
+                       Foreground="White"
+                       FontSize="21"
+                       FontWeight="Bold"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Top"
+                       Margin="0, 10, 0, 0"/>
+                    
+                </StackPanel>
+                
+                <StackPanel Grid.Row="1" 
+                            Grid.Column="0">
+
+                    <Button x:Name="BtnStartStop"
+                            Content="Start"
+                            Background="White"
+                            HorizontalAlignment="Left"
+                            Width="70"
+                            Margin="0, 0, 0, 0"/>
+
+                    <Button x:Name="BtnRandom"
+                            Content="Random"
+                            Background="White"
+                            HorizontalAlignment="Left"
+                            Width="70"
+                            Margin="0, 2, 0, 0"/>
+
+                    <Button x:Name="BtnClear"
+                            Content="Clear"
+                            Background="White"
+                            HorizontalAlignment="Left"
+                            Width="70"
+                            Margin="0, 2, 0, 0"/>
+
+                </StackPanel>
+
+                <StackPanel Grid.Row="1" 
+                            Grid.Column="0">
+
+                    
+
+
+                </StackPanel>
+
+                <StackPanel Grid.Row="0"
+                            Grid.Column="1">
+
+                    <Label x:Name="CloseApp"
+                           Content="X"
+                           Foreground="Red"
+                           HorizontalAlignment="Right"
+                           VerticalAlignment="Top"
+                           Margin="0,15,21,0"
+                           FontSize="18"
+                           FontWeight="UltraBlack"/>
+
+                </StackPanel>
+
+            </Grid>
+
+            <!--Поле-->
+
+            <StackPanel Grid.Row="2"
+                        Grid.Column="0"
+                        Grid.ColumnSpan="5">
+                <Grid>
+                
+                <Border Height="498"
+                        Width="960"
+                        VerticalAlignment="Bottom"
+                        HorizontalAlignment="Center"
+                        CornerRadius="35"
+                        BorderBrush="Azure"
+                        BorderThickness="5"
+                        Margin="3, 0, 3,0"/>
+                    
+                    
+                </Grid>
+            </StackPanel>
+
+        </Grid>
+
+    </Grid>
+
+    
     
    
 </Window>
